--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> my first website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <h1> aman vai</h1> 
+    
+
+<div>
+
+<h1> PIONEER</h1>
+
+
+
+
+
+</div>
 </body>
 </html>
